fixed height issue on mobile

--- a/src/style/components/_home.scss
+++ b/src/style/components/_home.scss
@@ -1,4 +1,4 @@
 .app {
-  height: 100vh;
+  height: 100%;
   min-width: 100%;
 }
