--- a/src/style/vars/_typography.scss
+++ b/src/style/vars/_typography.scss
@@ -1,21 +1,25 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap");
 
 h1,
 h2,
 p {
   z-index: 99;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
 
   //comment this out if you want gradient.
   color: $primary-color;
 
   // if you wnna add that fancy gradient shit ** make sure to comment out color property above :)
-  // span{
-  //     background-image: linear-gradient(30deg, $primary-color 10%, $sub-color 80%);
-  //     background-clip: text;
-  //     -webkit-background-clip: text;
-  //     -webkit-text-fill-color: transparent;
-  //     }
+  // span {
+  //   background-image: linear-gradient(
+  //     30deg,
+  //     $primary-color 10%,
+  //     $sub-color 80%
+  //   );
+  //   background-clip: text;
+  //   -webkit-background-clip: text;
+  //   -webkit-text-fill-color: transparent;
+  // }
 }
 
 h1 {
